--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Choices</title>
+    <style>
+        #p1 {background-color: rgba(130, 37, 108, 0.637)}
+    </style>
 </head>
-<body>
+<body id="p1">
     <header>
         <nav>
             <ul>
