--- a/test.html
+++ b/test.html
@@ -37,12 +37,12 @@
 
 <p>select from the following options:</p>
 <form action="/index.html">
-      <input type="radio" id="html" name="fav_language" value="HTML">
-      <label for="html">Lionel Messi</label><br>
-      <input type="radio" id="css" name="fav_language" value="CSS">
-      <label for="css">Christiano Ronaldo</label><br>
-      <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-      <label for="javascript">Pele</label><br><br>
+    <input type="radio" id="html" name="fav_language" value="HTML">
+        <label for="html">Lionel Messi</label><br>
+    <input type="radio" id="css" name="fav_language" value="CSS">
+        <label for="css">Christiano Ronaldo</label><br>
+    <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+         <label for="javascript">Pele</label><br><br>
       <input type="submit" value="Submit">
     </form>
     <br>
@@ -109,6 +109,13 @@
         <td>France</td>
       </tr>
     </table>
+    <p>hello world</p>
+    <p style="background-color: red">Hello world</p>
+        <style>
+            P{font-size: 13px;}
+           #p1 {background-color: green}
+        </style>
+      
     
   
 
